주석수정
